--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ order-stat = "0.1.3"
 
 [dependencies.regex]
 version = "1.3.6"
+optional = true
 default-features = false
 features = ["std", "unicode-perl"]
 
 [features]
-default = ["argparse", "sysinfo"]
+default = ["argparse", "regex", "sysinfo"]
 sysinfo = ["platforms"]
 
 [dev-dependencies]
